--- a/package.json
+++ b/package.json
@@ -7,45 +7,48 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "gc": "cd android && ./gradlew clean"
   },
   "dependencies": {
-    "react": "17.0.2",
-    "react-native": "0.65.1",
-    "styled-components": "^5.3.1",
     "@react-native-async-storage/async-storage": "^1.15.7",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
-    "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^6.0.7",
     "axios": "^0.21.4",
+    "react": "17.0.2",
+    "react-native": "0.65.1",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-safe-area-context": "^3.3.1",
+    "react-native-reanimated": "^2.2.2",
+    "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.6.0",
     "react-native-size-matters": "^0.4.0",
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.4",
-    "reactotron-react-native": "^5.0.0",
-    "reactotron-redux": "^3.1.3",
-    "reactotron-redux-saga": "^4.2.3",
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.3.1",
     "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
-    "@types/jest": "^26.0.23",
-    "@types/react-native": "^0.65.0",
+    "@types/jest": "^27.0.1",
+    "@types/react": "^17.0.19",
+    "@types/react-native": "^0.64.13",
+    "@types/react-native-vector-icons": "^6.4.8",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.13",
     "@types/styled-components-react-native": "^5.1.1",
     "@typescript-eslint/parser": "^4.30.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-root-import": "^6.6.0",
     "eslint": "^7.14.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -58,10 +61,14 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.0",
+    "prettier": "^2.3.2",
     "react-native-codegen": "^0.0.7",
     "react-test-renderer": "17.0.2",
-    "prettier": "^2.3.2",
-    "typescript": "^3.8.3"
+    "reactotron-react-native": "^5.0.0",
+    "reactotron-redux": "^3.1.3",
+    "reactotron-redux-saga": "^4.2.3",
+    "typescript": "^4.4.2",
+    "typescript-styled-plugin": "^0.18.1"
   },
   "resolutions": {
     "@types/react": "^17"
